--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script>
-        // GANTI URL INI DENGAN URL DEPLOYMENT ANDA
+        // URL APP SCRIPT ANDA - SUDAH DIGANTI
         const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbyUF3O4o4vcV4bF-UOCf4xCHibj84KpHqX20StdjVIJRm5xKDe2zIIzNyJ4p5SPYSY/exec';
 
         // Show alert message
